--- a/main/index.html
+++ b/main/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html lang="en" ng-app="MusicManager" ng-strict-di>
+<html lang="en" ng-app="robot.manager" ng-strict-di>
     <head>
         <meta charset="utf-8">
         <title>ITESOFT.MusicManager</title>
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="assets/lib/angular-common/dist/assets/fonts/itesoft-bundle.min.css">
         <link rel="stylesheet" href="assets/lib/components-font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/app.css">
+        <link rel="stylesheet" href="assets/css/hand.css">
 
         <!-- Lib Scripts Dependencies-->
         <script type='text/javascript' src="assets/lib/angular-common/dist/assets/lib/vendor.min.js"></script>
@@ -21,17 +22,23 @@
         <script type='text/javascript' src="assets/lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
 
         <!-- Core Scripts -->
+
+        <script type='text/javascript' src="app/common/services/IT_LocalStorageServices.js"></script>
+        <script type='text/javascript' src="app/common/directives/handDirective.js"></script>
         <script type='text/javascript' src="app/app.module.js"></script>
         <script type='text/javascript' src="app/app.route.js"></script>
         <script type='text/javascript' src="app/common/services/translationService.js"></script>
-        <script type='text/javascript' src="app/common/controllers/mainController.js"></script>
+        <script type='text/javascript' src="app/common/services/ApplicationService.js"></script>
+        <script type='text/javascript' src="app/common/services/application.js"></script>
+        <script type='text/javascript' src="app/common/services/robotplayerService.js"></script>
+
 
         <!-- Feature Scripts -->
-        <script type='text/javascript' src="app/features/login/authService.js"></script>
-        <script type='text/javascript' src="app/features/login/loginController.js"></script>
-        <script type='text/javascript' src="app/features/music/poprock/poprockController.js"></script>
-        <script type='text/javascript' src="app/features/music/dance/danceController.js"></script>
-        <script type='text/javascript' src="app/features/playlist/playlistController.js"></script>
+        <script type='text/javascript' src="app/features/api/config/apiConfigCtrl.js"></script>
+        <script type='text/javascript' src="app/features/robot/hand/handEntity.js"></script>
+        <script type='text/javascript' src="app/features/robot/hand/handCtrl.js"></script>
+        <script type='text/javascript' src="app/features/robot/hand/stepEntity.js"></script>
+
     </head>
     <body>
         <div class="it-fill" ng-include="'app/app.template.html'"></div>
